library/general/block-nodeport-services/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockNodePort
metadata:
 name: block-node-port
spec:
 match:
  kinds:
   - apiGroups: [""]
     kinds: ["Service"]
